@@ -57,6 +57,16 @@
         layer=".interfaces.IThemeSpecific"
         />
 
+  <!-- The related items -->
+    <browser:viewlet
+        name="plone.belowcontentbody.relateditems"
+        manager="plone.app.layout.viewlets.interfaces.IBelowContentBody"
+        class=".viewlets.ContentRelatedItems"
+        view="plone.app.layout.globals.interfaces.IViewView"
+        permission="zope2.View"
+        layer=".interfaces.IThemeSpecific"
+        />
+
   <!-- The search box -->
   <browser:viewlet
       name="camomskin.searchbox"
