@@ -4,6 +4,7 @@ from collective.contentleadimage.browser.viewlets import LeadImageViewlet as Bas
 from collective.contentleadimage.config import IMAGE_FIELD_NAME
 from plone import api
 from plone.app.layout.viewlets. content import DocumentBylineViewlet as BaseDocumentBylineViewlet
+from plone.app.layout.viewlets. content import ContentRelatedItems as BaseContentRelatedItems
 from plone.app.layout.viewlets.common import ViewletBase
 from Products.CMFCore.utils import getToolByName
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
@@ -57,3 +58,26 @@ class DocumentBylineViewlet(BaseDocumentBylineViewlet):
 
     def show(self):
         return True
+
+
+class ContentRelatedItems(BaseContentRelatedItems):
+    def related2brains(self, related):
+        """Return a list of brains based on a list of relations. Will filter
+        relations if the user has no permission to access the content.
+
+        :param related: related items
+        :type related: list of relations
+        :return: list of catalog brains.
+
+        Customization: if the related item doesn't exists anymore, path is None
+        so don't try to make a catalog search (that raise and exception)
+        """
+        catalog = getToolByName(self.context, 'portal_catalog')
+        brains = []
+        for r in related:
+            path = r.to_path
+            if path:
+                # the query will return an empty list if the user has no
+                # permission to see the target object
+                brains.extend(catalog(path=dict(query=path, depth=0)))
+        return brains
